# zoo-animals

./: .gitignore  COPYRIGHT  GNUmakefile.in  TODO  configure  configure.ac  statlog  statlog-rollup.py
debian/: README.Debian  changelog  control  copyright  rules  za-apache-config.postinst  za-post.cron.d  za-post.init  za-post.postinst  za-post.prerm  za-post.triggers  za-postd.default  za-postd.init  za-postd.logrotate  za-postd.postinst  za-postd.prerm  za-postd.triggers  za-pre.init  za-pre.logrotate  za-pre.postinst  za-pre.prerm
docs/: Makefile.in  conf.py  index.rst
za-apache-config/: site-template
za-base/: apache.conf  index.php  merge-timings.py  old-schema.cs  sed-maverick.in  sed-natty.in  sed-oneiric.in  sed-precise.in  za-css.in  za-headers-php.in
za-conf/: ZAconf-py.in  ZAconf.man  za-conf.in
za-machine-info/: index.php
za-machine-matrix/: index.php  mm-headerbar.php  overview.php  post.php  pre.php
za-php-utils/: cat.php  tail.php
za-post/: ZApostgen.py  aliases  dc-headerbar.php  log.php  results.php  status.php  sudoers  za-post-check-loop-sh.in
za-post/tests/: First  GNUmakefile.in  c  nova-bom.inc  sample.conf  sections  svnroot.tbz  workdir.out  za-post
za-postd/: ZApostd.py
za-pre/: Speculator.py  WorkQueue.py  aliases.in  configs.php  hookscript-open-webos.sh  hookscript-stub.sh  hookscript-svn.sh  hookscript-zoo-animals.sh  index.php  log.php  pre-headerbar-php.in  status.php  sudoers.in  watchdog-sh.in  za-pre-check-loop-sh.in
za-pre/tests/: GNUmakefile.in  gold3  shellout-golden  test1  test1-gold.inc  test2  test2-gold.inc  (+6 more)
